[project]
name = "AlfenCharger"
version = "5.42"
authors = [
  { name="Harm van den Brink", email="harmvandenbrink@gmail.com" },
]
description = "A Python library for controlling Alfen EV chargers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HarmvandenBrink/Alfen_Chargestation_Reader_And_Controller"
Issues = "https://github.com/HarmvandenBrink/Alfen_Chargestation_Reader_And_Controller/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alfenchargestation"]